--- a/index.html
+++ b/index.html
@@ -37,13 +37,14 @@
                 <div id="navbar" class="navbar-collapse collapse" role="navigation">
                     <div class="container-fluid text-center">
                         <ul class="nav navbar-nav">
-                            <li><a href="#">menu</a></li>
-                            <li><a href="#">about</a></li>
-                            <li><a href="#">service</a></li>
-                            <li><a href="#">membership</a></li>
-                            <li><a href="#">staff</a></li>
-                            <li><a href="#">gallery</a></li>
-                            <li><a href="#">contact</a></li>
+                            <li><a href="#home">home</a></li>
+                            <li><a href="#about">about</a></li>
+                            <li><a href="#service">service</a></li>
+                            <li><a href="#benefits">benefits</a></li>
+                            <li><a href="#mission">mission</a></li>
+                            <li><a href="#partners">partners</a></li>
+                            <li><a href="#faq">faq</a></li>
+                            <li><a href="#contact">contact</a></li>
                         </ul>
                     </div>
                 </div>
@@ -73,6 +74,9 @@
                     <!-- Add Arrows -->
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
+                </div>
+                <div class="scroll-down">
+                    <a href="" id="down"></a>
                 </div>
             </div>
         </div>
@@ -107,54 +111,59 @@
             <div class="container service text-center">
                 <h1 class="section-title">service</h1>
                 <div class="row">
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-paint-brush"></i>
-                            <h4>design</h4>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-paint-brush"></i>
+                                <h4>design</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-gear"></i>
-                            <h4>development</h4>
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-gear"></i>
+                                <h4>development</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-line-chart"></i>
-                            <h4>social marketing</h4>
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-line-chart"></i>
+                                <h4>social marketing</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas
-                        </p>
                     </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-shopping-cart"></i>
-                            <h4>e-commerce</h4>
+                    <div class="row">
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-shopping-cart"></i>
+                                <h4>e-commerce</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-life-saver"></i>
-                            <h4>Multimedia Solutions</h4>
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-life-saver"></i>
+                                <h4>Multimedia Solutions</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumendanventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumendanventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-sm-6">
-                        <div class="service-icon"><i class="fa fa-cogs"></i>
-                            <h4>Software development</h4>
+                        <div class="col-md-4 col-sm-4">
+                            <div class="service-icon"><i class="fa fa-cogs"></i>
+                                <h4>Software development</h4>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
+                            </p>
                         </div>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit necessitatibus ratione, assumenda dolor numquam, inventore sit quidem voluptas illum! Repellat quidem voluptatibus corrupti, perferendis eos sequi repellendus earum labore iste!
-                        </p>
                     </div>
+
                 </div>
             </div>
         </div>
